gitignore: add tex files

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,16 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+## Bibliography auxiliary files (bibtex/biblatex/biber):
+*.bbl
+*.bcf
+*.blg
+*-blx.aux
+*-blx.bib
+*.run.xml
+
+*.aux
+*.synctex.gz
+*.log
+*.toc
